Cache and stuff.

--- a/tests/config/missingdbcallkeys/blenders.model1.config
+++ b/tests/config/missingdbcallkeys/blenders.model1.config
@@ -1,7 +1,7 @@
 module.exports = {
     missing_fields_when_needed: {
         call: [{
-            name: 'find_one_by_id_this_doesnt_exist'
+            db: 'find_one_by_id_this_doesnt_exist'
             key: 'thing'
         }]
     }
