--- a/tests/config/valid/blenders.model1.config
+++ b/tests/config/valid/blenders.model1.config
@@ -1,109 +1,126 @@
 module.exports = {
     missing_fields_when_needed: {
-        call: [{
-            name: 'find_one_by_id'
+        commands: [{
+            db: 'find_one_by_id',
             key: 'thing'
         }]
     },
     missing_fields_but_ok: {
-        call: [{
-            name: 'find_one_with_preset_field_search',
+        commands: [{
+            db: 'find_one_with_preset_field_search',
             key: 'thing'
         }]
     },
     one_level_next: {
-        call: [{
-            name: 'find_one_by_id',
+        required_params: ['id', 'id2'],
+        cache: {
+            set: true,
+            hashkey: ['find_one_by_id', ':id'],
+            resultkey: ['-descending', ':limit', ':account_skip'],
+            clearon: [{
+                name: 'save_item',
+                params: {
+                    id: ':id'
+                }
+            }, {
+                name: 'update_item',
+                params: {
+                    id: ':id'
+                }
+            }
+        },
+        commands: [{
+            db: 'find_one_by_id',
             key: 'thing',
             params: {
                 id: ':id'
             },
             fields: ['field'],
-            cache: {
-                listen: ['save_item:id', 'update_item:id']
-            },
             next: [{
-                    name: 'find_many_by_id',
+                    db: 'find_many_by_id',
                     key: 'subthings1',
                     params: {
-                        sub_id: '@result.id'
+                        sub_id: '@thing.id',
+                        sort: '-descending',
+                        limit: ':limit',
+                        skip: ':account_skip'
                     }
                 }, {
-                    name: 'find_many_by_id',
-                    key: 'subthings2'
+                    db: 'find_many_by_id',
+                    key: 'subthings2',
                     params: {
-                        sub_id: '@result.id'
-                }
+                        sub_id: ':id2'
+                    }
             }]
         }]
     },
     two_level_next_all_find_one: {
-        call: [{
-            name: 'find_one_by_id',
+        commands: [{
+            db: 'find_one_by_id',
             key: 'thing',
             params: {
                 id: ':id'
             },
             fields: ['field'],
             next: [{
-                name: 'find_one_by_id',
-                key: 'subthing1'
+                db: 'find_one_by_id',
+                key: 'subthing1',
                 params: {
-                    id: '@result.id'
+                    id: '@subthing1.id'
                 },
                 next: [{
                     name: 'find_many_by_id',
                     key: 'subthings2',
                     params: {
-                        id: '@result.id'
+                        ids: '$map(@subthing1,id)'
                     }
                 }]
             }]
         }]
     },
     two_level_next_with_find_many: {
-        calls: [{
-            name: 'find_many_by_id',
+        commands: [{
+            db: 'find_many_by_id',
             key: 'things',
             params: {
                 id: ':id'
             },
             fields: ['field'],
             next: [{
-                name: 'find_many_by_ids',
+                db: 'find_many_by_ids',
                 key: 'subthing1',
                 params: {
-                    ids: '$map(result,id)'
-                }
+                    ids: '$map(@things,id)'
+                },
                 match: {
                     on: [
-                        'id': 'sub1_id'
+                        { id: 'sub1_id' }
                     ]
                 },
                 next: [{
-                    name: 'find_many_by_ids',
+                    db: 'find_many_by_ids',
                     key: 'subthing2',
                     params: {
-                        ids: '$map(result,id)'
+                        ids: '$map(@subthing2,id)'
                     },
                     match: {
-                        on: {
-                            'id': 'sub2_id'
-                        }
+                        on: [
+                            {'id': 'sub2_id'}
+                        ]
                     }
                 }]
             }]
         }]
     },
     one_level_parallel_calls: {
-        calls: [{
-            name: 'find_many_by_id',
+        commands: [{
+            db: 'find_many_by_id',
             key: 'things',
             params: {
 
             }
         }, {
-            name: 'find_one_by_id',
+            db: 'find_one_by_id',
             key: 'thing'
         }]
     }
