--- a/tests/config/valid/db.model1.config
+++ b/tests/config/valid/db.model1.config
@@ -2,7 +2,7 @@
 
 module.exports = {
     find_one_by_id: {
-        type: 'Item',
+        model: 'Item',
         params: {
             id: {
                 required: true
@@ -10,7 +10,7 @@ module.exports = {
             field1: {},
             field2: {}
         },
-        call: {
+        dbcall: {
             findOne: {
                 _id: ':id',
                 field1: ':field1',
@@ -19,7 +19,7 @@ module.exports = {
         }
     },
     find_one_by_search: {
-        type: 'Item',
+        model: 'Item',
         params: {
             id: {
                 required: true
@@ -27,7 +27,7 @@ module.exports = {
             field1: {},
             field2: {}
         },
-        call: {
+        dbcall: {
             findOne: {
                 _id: ':id',
                 field1: ':field1',
@@ -36,7 +36,7 @@ module.exports = {
         }
     },
     find_one_by_fields_all_required: {
-        type: 'Item',
+        model: 'Item',
         params: {
             id: {
                 required: true
@@ -48,7 +48,7 @@ module.exports = {
                 required: true
             }
         },
-        call: {
+        dbcall: {
             findOne: {
                 _id: ':id',
                 field1: ':field1',
@@ -57,7 +57,7 @@ module.exports = {
         }
     },
     find_many_by_id: {
-        type: 'Item',
+        model: 'Item',
         params: {
             id: {
                 required: true
@@ -69,46 +69,46 @@ module.exports = {
             }
         }
     },
-    find_may_by_ids: {
-        type: 'Item',
+    find_many_by_ids: {
+        model: 'Item',
         params: {
             ids: {
                 required: true
             }
         },
-        call: {
+        dbcall: {
             find: {
                 id: {
-                    '$in': ids
+                    $in: ':ids'
                 }
             }
         }
     },
     find_one_with_preset_field_search : {
-        type: 'Item',
-        call: {
+        model: 'Item',
+        dbcall: {
             find: {
                 name: 'Chris Fricke'
             }
         }
     },
     save_item: {
-        type: 'Item',
-        emit: {
-            finish: 'save_item:sub_id'
-        },
+        model: 'Item',
+        emit: [{
+            finish: 'save_item:id'
+        }],
         params: {
             id: {},
             sub_id: {
                 required: true
             }
         },
-        call: {
+        dbcall: {
             save: true
         }
     },
     update_item: {
-        type: 'Item',
+        model: 'Item',
         emit: {
             finish: 'update_item:sub_id'
         },
@@ -118,13 +118,16 @@ module.exports = {
             },
             sub_id: {
                 required: true
+            },
+            field1: {
+                required: true
             }
         },
-        call: {
+        dbcall: {
             update: [{
                 $and: [{ _id: ':id' }, { sub_id: ':sub_id' }]
             }, {
-                $set: { field1: 'field1' }
+                $set: { field1: ':field1' }
             }, { 
                 'sort': 'descending'
             }]
