--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "url": ""
   },
   "dependencies": {
+    "async": "0.1.x",
     "nconf": "0.5.x",
-    "mongoose": "3.0.x",
+    "mongoose": "3.0.2",
     "optimist": "0.3.x",
+    "tracer": "0.5.x",
     "underscore": "1.3.x"
   },
   "devDependencies": {
