--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "async": "0.1.x",
     "nconf": "0.5.x",
     "mongoose": "3.0.2",
+    "mongoose-types": "1.0.x",
     "optimist": "0.3.x",
     "redis": "0.7.x",
     "tracer": "0.5.x",
