--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongojuice",
   "version": "0.0.4",
-  "description": "Mongo Route Data Mapping for a REST web service",
+  "description": "Mongo DB command configuration with Redis caching",
   "author": { "name": "Chris Fricke", "email": "chris.fricke@gmail.com" },
   "repository": {
     "type": "git",
